--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6F1F1F1">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#E6F1F1F1"
+    tools:context=".FindBestShopActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,7 +56,7 @@
                 </LinearLayout>
 
                 <com.jaredrummler.materialspinner.MaterialSpinner
-                    android:id="@+id/filter_distance_spinner"
+                    android:id="@+id/spinner_distance"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:layout_marginLeft="16dp"
@@ -92,7 +94,7 @@
                 </LinearLayout>
 
                 <com.jaredrummler.materialspinner.MaterialSpinner
-                    android:id="@+id/filter_discount_spinner"
+                    android:id="@+id/spinner_discount"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:layout_marginLeft="16dp"
@@ -130,7 +132,7 @@
                 </LinearLayout>
 
                 <com.jaredrummler.materialspinner.MaterialSpinner
-                    android:id="@+id/filter_reviews_spinner"
+                    android:id="@+id/spinner_reviews"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:layout_marginLeft="16dp"
@@ -173,9 +175,15 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/backgroundbutton"
-                        android:text="Save"
+                        android:text="SEARCH"
                         android:textColor="#fff" />
                 </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_best_shop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                </android.support.v7.widget.RecyclerView>
 
             </LinearLayout>
 
