--- a/app/src/main/res/layout/activity_shop_homepage.xml
+++ b/app/src/main/res/layout/activity_shop_homepage.xml
@@ -14,9 +14,7 @@
         android:layout_height="wrap_content"
         app:cardElevation="5dp"
         app:cardBackgroundColor="#FFFFFF">
-
         <include layout="@layout/toolbar_homepage"/>
-
     </android.support.v7.widget.CardView>
 
     <android.support.v4.widget.NestedScrollView
@@ -25,11 +23,13 @@
         android:scrollbars="none">
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/home_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16.7dp"
@@ -41,22 +41,17 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="14.7sp"
-                    android:text="For You"
-                    android:fontFamily="Nunito_Black"
+
+                    android:text="Best pet shops for you"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:textColor="#000000"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="More"
-                    android:fontFamily=""
-                    android:textColor="#535353"
-                    android:textSize="11.7sp"/>
+
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/RecyclerViewForYou"
+                android:id="@+id/recycler_view_best_shop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="16.7dp"
@@ -76,22 +71,15 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="14.7sp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:text="Services"
                     android:fontFamily=""
                     android:textColor="#000000"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="More"
-                    android:fontFamily=""
-                    android:textColor="#535353"
-                    android:textSize="11.7sp"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/RecyclerViewCategory"
+                android:id="@+id/recycler_view_shop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="16.7dp"
@@ -112,18 +100,12 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="14.7sp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:text="Discount"
                     android:fontFamily=""
                     android:textColor="#000000"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="More"
-                    android:fontFamily=""
-                    android:textColor="#535353"
-                    android:textSize="11.7sp"/>
             </LinearLayout>
 
 
@@ -148,18 +130,12 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="14.7sp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:text="Nearby"
                     android:fontFamily=""
                     android:textColor="#000000"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="More"
-                    android:fontFamily=""
-                    android:textColor="#535353"
-                    android:textSize="11.7sp"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
@@ -171,8 +147,52 @@
                 android:nestedScrollingEnabled="false"
                 android:clipToPadding="false"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="16.7dp"
+                android:layout_marginLeft="16.7dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:text="Best reviewed shop"
+                    android:fontFamily=""
+                    android:textColor="#000000"/>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_salon_by_rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="16.7dp"
+                android:paddingTop="16.7dp"
+                android:nestedScrollingEnabled="false"
+                android:clipToPadding="false"/>
+
+            <LinearLayout
+                android:id="@+id/show_search_result_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_filter_service"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+
 
 
     </android.support.v4.widget.NestedScrollView>
