--- a/app/src/main/res/layout/item_shop_by_rating.xml
+++ b/app/src/main/res/layout/item_shop_by_rating.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_best_service"
+    android:id="@+id/card_view_shop_by_rating"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layout_margin="5dp"
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="10">
+        >
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -26,16 +27,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY" />
 
-            <TextView
-                android:id="@+id/txt_sale_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorBlue"
-                android:padding="5dp"
-                android:text="- 20%"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:textStyle="bold" />
+
         </RelativeLayout>
 
         <LinearLayout
@@ -44,59 +36,54 @@
             android:layout_weight="7"
             android:orientation="vertical"
             android:weightSum="4">
-
-            <TextView
-                android:id="@+id/shop_service_name"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity=""
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="Service name"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                android:textStyle="bold" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="5"
+                >
 
                 <TextView
-                    android:id="@+id/txt_service_price"
+                    android:id="@+id/shop_name"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:gravity="center|right"
-                    android:paddingRight="8dp"
-                    android:text="Price"
+                    android:layout_gravity=""
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="Salon name"
                     android:textColor="@color/black"
-                    android:textSize="12dp"
-
-                    />
-
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
                 <TextView
-                    android:id="@+id/txt_service_sale_price"
+                    android:id="@+id/rating"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Sale price"
-                    android:textColor="@color/colorBlue"
+                    android:layout_gravity=""
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="4.5"
+                    android:drawableRight="@drawable/star"
+                    android:textColor="@color/black"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
                 <TextView
                     android:id="@+id/shop_address"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/locaton_icon"
                     android:gravity="center|left"
                     android:paddingLeft="10dp"
-                    android:text="Address"
+                    android:text="  Address"
                     android:textColor="@color/black"
                     android:textSize="10dp"
                     android:textStyle="bold" />
