--- a/app/src/main/res/layout/item_shop_detail.xml
+++ b/app/src/main/res/layout/item_shop_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_best_service"
+    android:id="@+id/card_view_shop_detail"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layout_margin="5dp"
@@ -26,16 +26,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY" />
 
-            <TextView
-                android:id="@+id/txt_sale_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorBlue"
-                android:padding="5dp"
-                android:text="- 20%"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:textStyle="bold" />
+
         </RelativeLayout>
 
         <LinearLayout
@@ -59,44 +50,20 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_height="wrap_content"
+
                 android:orientation="horizontal"
-                android:weightSum="10">
-
-                <TextView
-                    android:id="@+id/txt_service_price"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:gravity="center|right"
-                    android:paddingRight="8dp"
-                    android:text="Price"
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
-
-                    />
-
-                <TextView
-                    android:id="@+id/txt_service_sale_price"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Sale price"
-                    android:textColor="@color/colorBlue"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
+                >
 
                 <TextView
                     android:id="@+id/shop_address"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
                     android:drawableLeft="@drawable/locaton_icon"
                     android:gravity="center|left"
                     android:paddingLeft="10dp"
-                    android:text="Address"
+                    android:text="  Address"
                     android:textColor="@color/black"
                     android:textSize="10dp"
                     android:textStyle="bold" />
